[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visualisation-lib"
version = "0.1.0"
description = "A visualisation library organised with the Cookiecutter Data Science layout."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "jupyter",
    "mkdocs",
]

[tool.setuptools.packages.find]
where = ["src"]
